# CodeAtlas

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  backend_structure.txt  backend_tree_view.txt  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: frontend-ci.yml
backend/: .env.example  README.md  requirements.txt  test.py  test_ai_context.py  test_ignore.py  test_symbols.py
backend/app/: config.py  main.py
backend/app/ai/: context_builder.py  embeddings.py  llm.py  ollama_client.py  prompt_builder.py  prompts.py  rag.py  retriever.py  vector_store.py
backend/app/analysis/: architecture.py  dependency_builder.py  metrics.py  registry.py
backend/app/api/: ai.py  graph.py  project.py
backend/app/database/: models.py
backend/app/parser/: models.py  parser_service.py  symbol_extractor.py  tree_parser.py
backend/app/scanner/: scanner.py
backend/app/services/: ai_service.py  architecture_service.py  chat_service.py  graph_service.py  parser_service.py  project_service.py  scanner_service.py
backend/app/utils/: constants.py  helpers.py  logger.py
docs/: AI_ARCHITECTURE.md  DEMO_SCRIPT.md  SUBMISSION_CHECKLIST.md  TECHNICAL_REPORT.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  wide.css
frontend/src/api/: codeAtlas.ts
frontend/src/components/: FeatureCards.css  FeatureWorkspace.css  FeatureWorkspace.tsx  Integration.css  Lightfall.css  Lightfall.tsx  ProjectGalaxy.css  ProjectGalaxy.tsx  ProjectGalaxy3D.css  ShinyText.css  ShinyText.tsx  UploadFlow.css  (+3 more)
(+6 files in other folders)
