[project]
name = "codeatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "gitpython>=3.1.50",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.5",
    "tree-sitter-python>=0.25.0",
]

[tool.pyright]
extraPaths = ["backend"]

